policies/audit-sa-token-mount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-sa-token-mount
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: add-automount-false
    match:
      any:
      - resources:
          kinds:
          - Pod
          - Deployment
          - StatefulSet
          - DaemonSet
          - Job
          - CronJob
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kyverno
          - ingress-nginx
          - kube-public
          - kube-node-lease
          - kubernetes-dashboard
    mutate:
      patchStrategicMerge:
        spec:
          automountServiceAccountToken: false
          template:
            spec:
              automountServiceAccountToken: false
